# plato-engine-block

./: .gitignore  AGENT.md  Cargo.toml  DEVELOPER_GUIDE.md  PLUG_AND_PLAY.md  README.md  TUTORIAL.md
src/: actuator.rs  alarm.rs  engine.rs  history.rs  lib.rs  protocol.rs  sensor.rs  server.rs  tick.rs
